--- a/assets/styles.css
+++ b/assets/styles.css
@@ -64,13 +64,15 @@ form input[type="submit"]:hover {
   font-size: 24px;
   padding: 5px;
 }
-.card p > .version {
+.card p span {
   font-size: 14px;
   color: #930000;
+  font-style: italic;
 }
 .card p i {
   color: #181818aa;
   font-size: 14px;
+  font-weight: lighter;
 }
 .card p span {
   font-family: "Courier New", Courier, monospace;
